--- a/games-service.yml
+++ b/games-service.yml
@@ -1,7 +1,7 @@
 spring:  
   datasource:
     driverClassName: org.h2.Driver
-    url: jdbc:h2:mem:db/games;DB_CLOSE_DELAY=-1
+    url: jdbc:h2:mem:db/animals;DB_CLOSE_DELAY=-1
     username: sa
     password: sa
   
