Update and rename games-library-service.yml to catalog-service.yml

--- a/catalog-service.yml
+++ b/catalog-service.yml
@@ -7,7 +7,7 @@ spring:
   
   sql:
     init:
-      dataLocations: classpath:/games-library-service.sql  
+      dataLocations: classpath:/catalog-service.sql  
       
   jpa:  
     defer-datasource-initialization: true
