--- a/gateway-service.yml
+++ b/gateway-service.yml
@@ -11,6 +11,9 @@ eureka:
         preferIpAddress: true
        
 spring:
+  main:
+    web-application-type: reactive
+    allow-bean-definition-overriding: true
   cloud:
     gateway:
       discovery:
