--- a/movies-service.yml
+++ b/movies-service.yml
@@ -24,3 +24,19 @@ eureka:
     registerWithEureka: true
     serviceUrl:
       defaultZone: http://localhost:8761/eureka
+
+resilience4j.circuitbreaker:
+    instances:
+        backendA:
+            registerHealthIndicator: true
+            slidingWindowSize: 100
+        backendB:
+            registerHealthIndicator: true
+            slidingWindowSize: 10
+            permittedNumberOfCallsInHalfOpenState: 3
+            slidingWindowType: TIME_BASED
+            minimumNumberOfCalls: 20
+            waitDurationInOpenState: 50s
+            failureRateThreshold: 50
+            eventConsumerBufferSize: 10
+            recordFailurePredicate: io.github.robwin.exception.RecordFailurePredicate
