--- a/movies-service.yml
+++ b/movies-service.yml
@@ -27,16 +27,12 @@ eureka:
 
 resilience4j.circuitbreaker:
     instances:
-        backendA:
-            registerHealthIndicator: true
-            slidingWindowSize: 100
-        backendB:
+        movies:
             registerHealthIndicator: true
             slidingWindowSize: 10
             permittedNumberOfCallsInHalfOpenState: 3
             slidingWindowType: TIME_BASED
-            minimumNumberOfCalls: 20
-            waitDurationInOpenState: 50s
+            minimumNumberOfCalls: 4
+            waitDurationInOpenState: 5s
             failureRateThreshold: 50
             eventConsumerBufferSize: 10
-            recordFailurePredicate: io.github.robwin.exception.RecordFailurePredicate
