--- a/movies-service.yml
+++ b/movies-service.yml
@@ -1,19 +1,7 @@
 spring:  
-  datasource:
-    driverClassName: org.h2.Driver
-    url: jdbc:h2:mem:db/movies;DB_CLOSE_DELAY=-1
-    username: sa
-    password: sa
-  
-  sql:
-    init:
-      dataLocations: classPath:/movies_service.sql  
-  
-  
-  jpa:
-    defer-datasource-initialization: true
-    hibernate:
-      ddlAuto: create-drop
+  data:
+    mongodb:
+      uri: mongodb://localhost:27017/movies
 
 server:
     port: 8081
