--- a/catalog-service.yml
+++ b/catalog-service.yml
@@ -5,6 +5,11 @@ spring:
 
 server:
     port: 8082
+    
+jpa:  
+     defer-datasource-initialization: true
+     hibernate:
+       ddlAuto: create-drop
 
 eureka:
   client:
