--- a/catalog-service.yml
+++ b/catalog-service.yml
@@ -1,4 +1,7 @@
 spring:
+  zipkin:
+    base-url: http://localhost:9411/
+    enabled: true
   data:
     mongodb:
       uri: mongodb://localhost:27017/catalog
