--- a/movies-service.yml
+++ b/movies-service.yml
@@ -4,6 +4,7 @@ spring:
     enabled: true
     sender: 
       type: rabbit
+    enable: true
   data:
     mongodb:
       uri: mongodb://localhost:27017/movies
