--- a/catalog-service.yml
+++ b/catalog-service.yml
@@ -2,6 +2,8 @@ spring:
   zipkin:
     base-url: http://localhost:9411/
     enabled: true
+    sender: 
+      type: rabbit
   data:
     mongodb:
       uri: mongodb://localhost:27017/catalog
