--- a/movies-service.yml
+++ b/movies-service.yml
@@ -25,11 +25,12 @@ eureka:
 resilience4j.circuitbreaker:
     instances:
         movies:
-            registerHealthIndicator: true
-            slidingWindowSize: 10
-            permittedNumberOfCallsInHalfOpenState: 3
-            slidingWindowType: TIME_BASED
-            minimumNumberOfCalls: 4
-            waitDurationInOpenState: 5s
-            failureRateThreshold: 50
-            eventConsumerBufferSize: 10
+          allowHealthIndicatorToFail: false
+          registerHealthIndicator: true
+          slidingWindowSize: 10
+          permittedNumberOfCallsInHalfOpenState: 3
+          slidingWindowType: TIME_BASED
+          minimumNumberOfCalls: 4
+          waitDurationInOpenState: 5s
+          failureRateThreshold: 50
+          eventConsumerBufferSize: 10
