--- a/catalog-service.yml
+++ b/catalog-service.yml
@@ -24,3 +24,15 @@ eureka:
   instance:
     preferIpAddress: true    
       
+resilience4j.circuitbreaker:
+    instances:
+        movies:
+          allowHealthIndicatorToFail: false
+          registerHealthIndicator: true
+          slidingWindowSize: 10
+          permittedNumberOfCallsInHalfOpenState: 3
+          slidingWindowType: TIME_BASED
+          minimumNumberOfCalls: 4
+          waitDurationInOpenState: 5s
+          failureRateThreshold: 50
+          eventConsumerBufferSize: 10
