--- a/catalog-service.yml
+++ b/catalog-service.yml
@@ -26,7 +26,7 @@ eureka:
       
 resilience4j.circuitbreaker:
     instances:
-        movies:
+        catalog:
           allowHealthIndicatorToFail: false
           registerHealthIndicator: true
           slidingWindowSize: 10
