--- a/gateway-service.yml
+++ b/gateway-service.yml
@@ -11,6 +11,17 @@ eureka:
         preferIpAddress: true
        
 spring:
+  security:
+    oauth2:
+      client:
+        registration:
+          github:
+            #redirectUri: http://localhost:8080
+            client-id: f2eb8872a376cd5d10e7
+            client-secret: d9ab7c5a2a7ff5c222698c6a3977d8332062febb
+  main:
+    web-application-type: reactive
+    allow-bean-definition-overriding: true
   cloud:
     gateway:
       discovery:
